fixed bug where elements jump around the page

--- a/vidsplit/frontend/static/css/index.css
+++ b/vidsplit/frontend/static/css/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 #main {
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 100%;
   left: 0;
@@ -30,8 +30,6 @@ body {
 }
 
 .homepageGrid {
-  min-height: 100vh;
-  min-width: 100vh;
   height: 100%;
   width: 100%;
 }
@@ -44,5 +42,4 @@ body {
 
 .submitButton {
   height: 56px;
-  margin: 10px;
 }
